<resources>
    <string name="app_name">Closet &amp; Laundry</string>
    <string name="add_category">Add Category</string>
    <string name="default_wears_before_wash">"Default wears before wash"</string>
    <string name="add_item">Add Item</string>
    <string name="outfit_preview_placeholder">\u0020\u0020Nothing added to today\'s outfit\u0020\u0020</string>
    <string name="wash_item">Add to laundry?</string>
    <string name="no_results_found">No Results Found</string>
    <string name="worn_max">Worn: %d/%d</string>
    <string name="worn">Current Wears: %d</string>
    <string name="worn_2">/%d</string>
    <string name="expand_category">Expand Category</string>
    <string name="default_wears">Default Max:</string>
    <string name="wear">Wear</string>
    <string name="remove">Remove</string>
    <string name="number_of_items">Item Count: %d</string>
    <string name="item_preview">Item Preview</string>
    <string name="end_day">End Day</string>
    <string name="clear_selection">Clear Selection</string>
    <string name="wardrobe">Wardrobe</string>
    <string name="edit">Edit</string>
    <string name="today_s_outfit">Today\'s Outfit</string>
    <string name="search_items">Search Items</string>
    <string name="search">Search</string>
    <string name="clear_search">Clear Search</string>
    <string name="take_photo">Take Photo</string>
    <string name="name">Name</string>
    <string name="desired_wears">Desired Wears</string>
    <string name="add">Add</string>
    <string name="welcome_1">ggggg</string>
    <string name="dismiss">Dismiss</string>
    <string name="slide_to_end_day">Slide to end day</string>
    <string name="seek_fill">Seek Fill</string>
    <string name="clear_today_s_outfit">Clear Today\'s Outfit</string>
    <string name="more_info">More Info</string>
    <string name="fraction">%d/%d</string>
    <string name="into">Into</string>
    <string name="totals">Total: %d</string>
    <string name="email">palepeak25@gmail.com</string>
    <string name="delete">delete</string>
    <string name="washes">washes</string>
    <string name="wears">wears</string>
    <string name="no_max">No Max</string>
</resources>
