<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/mainWrapper"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible">


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/outfitPreview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:overScrollMode="never"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                tools:visibility="visible">

            </androidx.recyclerview.widget.RecyclerView>

            <Button
                android:id="@+id/endButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/end_day"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/cancelButton"
                app:layout_constraintTop_toBottomOf="@id/outfitPreview"
                tools:visibility="visible" />

            <Button
                android:id="@+id/cancelButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/clear_selection"
                app:layout_constraintEnd_toStartOf="@id/endButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/outfitPreview"
                tools:visibility="visible" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/categoryList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:overScrollMode="never"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/wardrobe"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/searchResult" />

            <ImageView
                android:id="@+id/editImage"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/textView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView"
                app:srcCompat="@android:drawable/ic_menu_edit"
                android:contentDescription="@string/edit" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/today_s_outfit"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/searchText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/rectangle_white"
                android:drawableStart="@android:drawable/ic_menu_search"
                android:hint="@string/search"
                android:padding="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cancelButton"
                android:autofillHints="search term"
                android:inputType="text" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/searchResult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/searchText" />

            <ImageView
                android:id="@+id/clearInputButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:elevation="5dp"
                android:tint="@color/grey"
                app:layout_constraintBottom_toBottomOf="@+id/searchText"
                app:layout_constraintEnd_toEndOf="@+id/searchText"
                app:layout_constraintTop_toTopOf="@+id/searchText"
                app:srcCompat="@android:drawable/ic_input_delete"
                android:contentDescription="@string/clear_search" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/addHolder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/greyout"
        android:clickable="true"
        android:elevation="5dp"
        android:focusable="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="gone">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/rectangle_white"
            android:elevation="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/photoPreview"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/item_preview"
                android:src="@android:color/transparent"
                app:layout_constraintStart_toStartOf="@+id/addTitle"
                app:layout_constraintTop_toBottomOf="@id/addTitle"
                app:srcCompat="@drawable/camera" />

            <Button
                android:id="@+id/takePhoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/take_photo"
                app:layout_constraintStart_toStartOf="@id/photoPreview"
                app:layout_constraintTop_toBottomOf="@id/photoPreview" />

            <EditText
                android:id="@+id/name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:autofillHints="name"
                android:hint="@string/name"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="@id/wears"
                app:layout_constraintStart_toStartOf="@id/takePhoto"
                app:layout_constraintTop_toBottomOf="@id/takePhoto" />

            <EditText
                android:id="@+id/wears"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:autofillHints="@string/desired_wears"
                android:hint="@string/desired_wears"
                android:inputType="text"
                app:layout_constraintStart_toStartOf="@+id/takePhoto"
                app:layout_constraintTop_toBottomOf="@id/name" />

            <Button
                android:id="@+id/doneAdding"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:text="@string/add"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@id/wears"
                app:layout_constraintTop_toBottomOf="@id/wears" />

            <TextView
                android:id="@+id/addTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/buttonCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@android:string/cancel"
                app:layout_constraintBottom_toBottomOf="@+id/doneAdding"
                app:layout_constraintStart_toEndOf="@+id/doneAdding"
                app:layout_constraintTop_toTopOf="@+id/doneAdding" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
