<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="220dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/rectangle_bg_grey"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/itemPreview"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/item_preview"
            android:gravity="center"
            android:text=""
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/itemName"
            tools:width="120dp" />


        <TextView
            android:id="@+id/itemWashLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:ellipsize="end"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/wash_item"
            app:layout_constraintBottom_toTopOf="@id/arrow"
            app:layout_constraintEnd_toStartOf="@id/itemWashBox"
            app:layout_constraintStart_toStartOf="@+id/itemPreview"
            app:layout_constraintTop_toBottomOf="@id/itemPreview"
            tools:textSize="16sp" />

        <CheckBox
            android:id="@+id/itemWashBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:clickable="false"
            android:gravity="center"
            android:text=""
            app:layout_constraintBottom_toBottomOf="@id/itemWashLabel"
            app:layout_constraintEnd_toEndOf="@+id/itemPreview"
            app:layout_constraintStart_toEndOf="@id/itemWashLabel"
            app:layout_constraintTop_toTopOf="@id/itemWashLabel"
            tools:textSize="18sp"
            tools:visibility="visible" />


        <TextView
            android:id="@+id/itemName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:lines="2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="1/1" />

        <TextView
            android:id="@+id/itemWashResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/arrow"
            app:layout_constraintStart_toEndOf="@id/arrow"
            app:layout_constraintTop_toTopOf="@id/arrow"
            app:layout_constraintVertical_bias="0.2"
            tools:text="1/1" />

        <TextView
            android:id="@+id/itemWash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/arrow"
            app:layout_constraintEnd_toStartOf="@id/arrow"
            app:layout_constraintTop_toTopOf="@id/arrow"
            app:layout_constraintVertical_bias="0.2"
            tools:text="0/1" />

        <ImageView
            android:id="@+id/arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/into"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/round_arrow_right_alt_24" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/itemDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/round_cancel_24"
        android:clickable="true"
        android:contentDescription="@string/delete"
        android:focusable="true"
        android:padding="8dp"
        app:layout_constraintBottom_toTopOf="@id/linearLayout"
        app:layout_constraintEnd_toEndOf="@id/linearLayout"
        app:layout_constraintStart_toEndOf="@id/linearLayout"
        app:layout_constraintTop_toTopOf="@id/linearLayout" />

    <View
        android:id="@+id/activeItemClickHolder"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>