<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/itembgaccept"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.palepeak.closet_tracker.SingleListenEditText
        android:id="@+id/itemName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@android:color/transparent"
        android:gravity="center_vertical"
        android:maxLines="3"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        android:textFontWeight="500"
        app:layout_constraintBottom_toTopOf="@id/itemWash"
        app:layout_constraintEnd_toStartOf="@+id/addButton"
        app:layout_constraintStart_toEndOf="@+id/itemPreview"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Charcoal Banana Rebublic Merino and Cashmere Blend Crewneck Sweater" />

    <ImageView
        android:id="@+id/itemPreview"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintBottom_toTopOf="@id/view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/item_preview" />

    <TextView
        android:id="@+id/addButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:background="@drawable/rectangle_bg_grey_selector"
        android:paddingHorizontal="16dp"
        android:paddingVertical="12dp"
        android:textAllCaps="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="wear" />

    <TextView
        android:id="@+id/itemWash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@id/itemWornTotal"
        app:layout_constraintStart_toStartOf="@id/itemName"
        app:layout_constraintTop_toBottomOf="@id/itemName"
        tools:text="Worn since wash: 30/" />

    <com.palepeak.closet_tracker.SingleListenEditText
        android:id="@+id/itemWashMax"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:gravity="center_vertical"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@id/itemWash"
        app:layout_constraintEnd_toEndOf="@+id/itemName"
        app:layout_constraintStart_toEndOf="@id/itemWash"
        tools:text="30" />

    <TextView
        android:id="@+id/itemWornTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/view"
        app:layout_constraintStart_toStartOf="@id/itemWash"
        app:layout_constraintTop_toBottomOf="@id/itemWash"
        tools:text="wrewer" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:contentDescription="@string/wears"
        app:layout_constraintBottom_toBottomOf="@+id/itemWornTotal"
        app:layout_constraintStart_toEndOf="@id/itemWornTotal"
        app:layout_constraintTop_toTopOf="@+id/itemWornTotal"
        app:srcCompat="@drawable/round_checkroom_24" />

    <TextView
        android:id="@+id/itemWashTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/itemWornTotal"
        app:layout_constraintStart_toEndOf="@id/imageView2"
        tools:text="rweerw" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        app:layout_constraintBottom_toBottomOf="@id/itemWashTotal"
        app:layout_constraintStart_toEndOf="@id/itemWashTotal"
        app:layout_constraintTop_toTopOf="@+id/itemWashTotal"
        app:srcCompat="@drawable/round_local_laundry_service_24"
        android:contentDescription="@string/washes" />

</androidx.constraintlayout.widget.ConstraintLayout>